clusters/homelab/infrastructure/longhorn/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - kind: Gateway
      name: cilium
      namespace: gateway
      sectionName: https
  hostnames:
    - "longhorn.lab.<YOUR_DOMAIN>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
